data/derived/sp14/progs/unify/prog1084.ml.out
Characters 104-105:
  if (makeRand 0 1 = 0) then expr ^ "VarX"
               ^
Error: This expression has type int but an expression was expected of type
         int * int
